test/spec_vectors/f32_cmp/fail/module_4.wat
(module (func (result f32) (f32.le (i64.const 0) (f64.const 0))))